[package]
edition = "2021"
name = "clox-rs"
version = "0.1.0"

[dependencies]
clap = {version = "4.0.29", features = ["derive"]}
derivative = "2.2.0"
hashbrown = "0.13.1"
humansize = "2.1.2"
num_enum = "0.5.7"
paste = "1.0.9"
shrinkwraprs = "0.3.0"
slotmap = "1.0.6"

# Uncomment for valgrind profiling
#[profile.release]
#debug = true
#opt-level = 1
