[package]
edition = "2021"
name = "web"
version = "0.1.0"

[dependencies]
clox-rs = {path = "../"}
console_log = "0.2.0"
js-sys = "0.3.60"
log = "0.4.17"
# monaco = {version = "0.3.0", features = ["yew-components"]}
# using monaco from git until there's a new release
monaco = {git = "https://github.com/abesto/rust-monaco.git", rev = "c6ef4e96f5619378428e15b870f366ca232350a3", features = ["yew-components"]}
#monaco = {path = "../../rust-monaco", features = ["yew-components"]}
wasm-bindgen = "0.2.83"
yew = {version = "0.20", features = ["csr"]}

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
